# NDK_Pro

./: README.md  settings.gradle
L01_Jni/: build.gradle
L01_Jni/src/androidTest/java/com/example/ndk_pro/: ExampleInstrumentedTest.java
L01_Jni/src/main/: AndroidManifest.xml
L01_Jni/src/main/cpp/: CMakeLists.txt  a.cpp  native-lib.cpp
L01_Jni/src/main/java/com/example/ndk_pro/: Bean.java  Bean2.java  MainActivity.java
L01_Jni/src/main/res/values/: strings.xml
L01_Jni/src/test/java/com/example/ndk_pro/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
l02_mk_cmake/: CMakeLists.txt  build.gradle
l02_mk_cmake/src/androidTest/java/com/example/l02_mk_cmake/: ExampleInstrumentedTest.java
l02_mk_cmake/src/main/: AndroidManifest.xml
l02_mk_cmake/src/main/cmake/: hello-jni.c
l02_mk_cmake/src/main/java/com/example/l02_mk_cmake/: MainActivity.java
l02_mk_cmake/src/main/ndkBuild/: Android.mk  hello-jni.c
l02_mk_cmake/src/main/res/values/: strings.xml
l02_mk_cmake/src/test/java/com/example/l02_mk_cmake/: ExampleUnitTest.java
l03_ffmpeg/: build.gradle
l03_ffmpeg/src/androidTest/java/com/example/l03_ffmpeg/: ExampleInstrumentedTest.java
l03_ffmpeg/src/main/: AndroidManifest.xml
l03_ffmpeg/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  WangYiFfmpeg.cpp  WangYiFfmpeg.h  macro.h  native-lib.cpp  safe_queue.h
l03_ffmpeg/src/main/java/com/example/l03_ffmpeg/: MainActivity.java  Player.java
l03_ffmpeg/src/main/java/com/example/l03_ffmpeg/player/: Player.java  Player2.java
l03_ffmpeg/src/main/res/layout/: activity_main.xml
l03_ffmpeg/src/main/res/values/: strings.xml
l03_ffmpeg/src/test/java/com/example/l03_ffmpeg/: ExampleUnitTest.java
l04_rtmp/: build.gradle
l04_rtmp/src/androidTest/java/com/example/l04_rtmp/: ExampleInstrumentedTest.java
l04_rtmp/src/main/: AndroidManifest.xml
l04_rtmp/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
l04_rtmp/src/main/cpp/include/: x264.h
l04_rtmp/src/main/cpp/librtmp/: CMakeLists.txt  hashswf.c
l04_rtmp/src/main/java/com/example/l04_rtmp/: LivePusher.java  MainActivity.java
l04_rtmp/src/main/java/com/example/l04_rtmp/meida/: AudioChannel.java  CameraHelper.java  VideoChannel.java
l04_rtmp/src/main/res/values/: strings.xml
l04_rtmp/src/test/java/com/example/l04_rtmp/: ExampleUnitTest.java
